docs/book/samples/appc/trailing_check.out
error[formatting]: trailing whitespace is not part of the canonical grammar
  --> trailing_check.kso:1:18
   1 | main = print "hi" 
                        ^
